= MagLev Change Log

  For more precise details see: http://bit.ly/d3C6S1

== Unreleased Changes

== Changes for 25153 2011-02-01
* Fix Trac 843
* Fix error in File.readlink
* Added IdentitySet#clear
* Fix problem in parsing of Ruby heredocs
* Allow unlimited size compiler heap nodes
* add Class#__fixed_instvars to fix 832, 840
* More changes to underlying GemStone 3.0 system, this may or may not be 
  the final GS/S 3.0 Beta 3

== Changes for 25127 2011-01-28
* First pass at implementing ruby-debug API. No attempt has been made to
  make the debugger commands similar to ruby-debug (see topaz
  documentation).  E.g., rspec -d ... now works.
* Some reimplementation of Exceptions
* Many changes to underlying GemStone 3.0 system in prep for GS/S 3.0 Beta 3
  most of which should not affect MagLev users
  
== Changes for 25051 2011-01-18
* Fix Trac 830 , problem in automatic to_proc coercion
* Fix Trac 834 , problem in code generation for instVar access
* Fix Trac 837 , problem in running code under irb and eval
* Fix Trac 838 , problem in smalltalk layer of FFI  implementation.
* Update Rails support to Rails 3.0.3.  The example Gemfile now points to
  Rails 3.0.3, and the active support patches are updated to handle either
  Rails 3.0.3 or Rails 3.0.0.
* Fix Trac 833, exhibited as undefined `[]' on NilClass when using
  Rack::Mount w/o -MallIvsDynamic
* Add -q option to maglev-ruby.  Using both -q and -d runs in debug, but
  w/o all the banner output at VM startup.
* Numerous changes to underlying GemStone 3.0 system
  
== Changes for 24990 2011-01-07
* Fix Trac 827 , problems with automatic to_proc coercion
* Update underlying GemStone 3.0 system to Beta2

== Changes for 24984 2011-01-06
* Pre-install rake-0.8.7 gem
* Pre-install bundler-1.0.7 gem.
* Fix for Trac 825 - Exception backtrace is bogus
* Fix that a subclass of string defining #<< messed up pure ruby gsub etc.
* Changes in GemStone 3.0 stats 