@@ -7,6 +7,13 @@ require 'address'
 class Person
   MARITAL_STATUS = [:single, :married, :hermit]
 
+  # Currently, only the instvars passed to __fixed_instvars are indexable.
+  # Even though the examples do not index on all inst vars, they are all
+  # listed here so that it is easy to play with the examples.
+  #
+  # See comments about fixed vs dynamic inst vars in ../README.rdoc on
+  self.__fixed_instvars :@name, :@age, :@gender, :@address, :@marital_status
+
   attr_reader :name, :age, :gender, :address
 
   def initialize(name, age, gender, address, marital_status=:single)
